# PopPy

./: .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c45b2e8b1711_add_due_and_completed_at_to_events_table.py  e0520140b700_create_events_table.py
src/poppy/api/: __init__.py  app.py
src/poppy/api/routes/: __init__.py  events.py
src/poppy/cli/: __init__.py  main.py
src/poppy/core/: __init__.py  events.py
src/poppy/db/: __init__.py  models.py  session.py
src/poppy/services/: __init__.py  event_handlers.py  utils.py
tests/: conftest.py  test_db.py  test_event_handlers.py  test_fastapi_app.py
