[project]
name = "poppy"
version = "0.1.0"
description = "Personal Operations Platform"
readme = "README.md"
authors = [
    { name = "Penya12", email = "rpk22ic@gmail.com" }
]
requires-python = ">=3.11.9"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "alembic>=1.13",
  "python-dotenv>=1.0",
  "pytest>=9.0.2",
  "testcontainers[postgresql]>=4.13.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.8",
  "types-python-dateutil",
]

[project.scripts]
poppy = "poppy.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
